--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -3,9 +3,12 @@
 {% set styles = ["primary", "secondary", "tertiary"] %}
 {% set prefix = "c-bolt-" %}
 
+{% set itemAlignments = {
+  "center": "center",
+  "left": "start"
+} %}
 
-
-{# Allowed Headline Sizes #}
+{# Allowed Button Sizes #}
 {% set sizes = [
   "xsmall",
   "small",
@@ -21,6 +24,7 @@
 {% set size = size | default("medium") %}
 {% set width = width | default("") %}
 {% set style = style | default("") %}
+{% set itemAlignment = itemAlignment | default("center") %}
 
 {% set tag = tag in tags ? tag: "a" %}
 
@@ -29,7 +33,8 @@
   baseClass,
   size in sizes ? baseClass ~ "--" ~ size : "",
   width in widths ? baseClass ~ "--" ~ width : "",
-  style in styles ? baseClass ~ "--" ~ style : ""
+  style in styles ? baseClass ~ "--" ~ style : "",
+  itemAlignment in itemAlignments|keys ? baseClass ~ "--item-align-" ~ itemAlignments[itemAlignment]
 ] %}
 
 
