WIP: card twig setup

--- a/src/_patterns/01-core/03-generic/generic-global/_generic.global.scss
+++ b/src/_patterns/01-core/03-generic/generic-global/_generic.global.scss
@@ -5,6 +5,7 @@
 /**
  * 1. Global box-sizing reset
  * 2. Remove default "touch" color behavior globally
+ * 3. Sharpens text to show true font styles
  */
 
 @import '@bolt/tools-font-kerning';
@@ -16,4 +17,7 @@
 
   box-sizing: border-box; /* [1] */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* [2] */
+
+  -webkit-font-smoothing: antialiased; /* [3] */
+  -moz-osx-font-smoothing: grayscale;
 }
