--- a/src/_patterns/02-components/01-bolt-button/src/_button.scss
+++ b/src/_patterns/02-components/01-bolt-button/src/_button.scss
@@ -8,8 +8,8 @@
 // @import '@bolt/tools-spacing';
 // @import '@bolt/tools-no-select';
 $bolt-color-button-text: bolt-color(white);
-$bolt-color-primary: bolt-color(blue);
-$bolt-color-secondary: bolt-color(blue);
+$bolt-color-primary: bolt-color(indigo, light);
+$bolt-color-secondary: bolt-color(indigo, light);
 
 $bolt-color--shadow: bolt-color(black);
 
