--- a/src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
+++ b/src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
@@ -67,7 +67,6 @@
         }
       } %}
         {% include "@bolt/card.twig" with {
-          tag: "a",
           url: "javascript:",
           items: [
             {
@@ -91,9 +90,8 @@
             },
             {
               name: "button",
-              style: "tertiary",
+              style: "text",
               width: "full",
-              tag: "div",
               itemAlignment: "start",
               text: "Get the report"
             }
@@ -225,7 +223,6 @@
         }
       } %}
         {% include "@bolt/card.twig" with {
-          tag: "a",
           url: "javascript:",
           items: [
             {
@@ -249,9 +246,8 @@
             },
             {
               name: "button",
-              style: "tertiary",
+              style: "text",
               width: "full",
-              tag: "div",
               itemAlignment: "start",
               text: "Get the report"
             }
