--- a/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
@@ -9,6 +9,8 @@
  * item
  */
 $bolt-ui-list-padding: (medium 0) !default;
+$bolt-ui-list-padding--small: (small 0) !default;
+$bolt-ui-list-padding--large: (large 0) !default;
 $bolt-ui-list-border-width: 1px !default;
 $bolt-ui-list-border-style: solid !default;
 $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
@@ -48,3 +50,12 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
 .o-bolt-ui-list--borderless {
   --bolt-ui-border-color: transparent;
 }
+
+.o-bolt-ui-list--small > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--small);
+}
+
+.o-bolt-ui-list--large > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--large);
+}
+
