Adding medium spacing option to ui list.

--- a/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
@@ -55,6 +55,10 @@ $bolt-ui-list-border-color: var(--bolt-ui-border-color, currentColor);
   @include bolt-padding($bolt-ui-list-padding--small);
 }
 
+.o-bolt-ui-list--medium > .o-bolt-ui-list__item {
+  @include bolt-padding($bolt-ui-list-padding--medium);
+}
+
 .o-bolt-ui-list--large > .o-bolt-ui-list__item {
   @include bolt-padding($bolt-ui-list-padding--large);
 }
