Adding ui list medium spacing variable.

--- a/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.scss
@@ -10,6 +10,7 @@
  */
 $bolt-ui-list-padding: (medium 0) !default;
 $bolt-ui-list-padding--small: (small 0) !default;
+$bolt-ui-list-padding--medium: $bolt-ui-list-padding !default;
 $bolt-ui-list-padding--large: (large 0) !default;
 $bolt-ui-list-border-width: 1px !default;
 $bolt-ui-list-border-style: solid !default;
