--- a/src/styles/_components.all.scss
+++ b/src/styles/_components.all.scss
@@ -2,7 +2,6 @@
    ALL COMPONENTS
 \* ------------------------------------ */
 
-// @import '@bolt/components-article';
 @import '@bolt/components-action-block';
 @import '@bolt/components-band';
 @import '@bolt/components-button';
@@ -10,13 +9,15 @@
 @import '@bolt/components-card';
 @import '@bolt/components-chip';
 @import '@bolt/components-background';
-// @import '@bolt/components-chip-list'; // No styles
 @import '@bolt/components-color-swatch';
-// @import '@bolt/components-critical-path'; // No styles
-// @import '@bolt/components-font-loader'; // No styles
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
 @import '@bolt/components-logo';
 @import '@bolt/components-page-footer';
 @import '@bolt/components-site';
+@import '@bolt/components-ordered-list';
+// @import '@bolt/components-chip-list'; // No styles
+// @import '@bolt/components-critical-path'; // No styles
+// @import '@bolt/components-font-loader'; // No styles
 // @import '@bolt/components-teaser'; // No styles
+// @import '@bolt/components-article';
