fix: fixing a few patterns that got moved around

--- a/src/_patterns/04-pages/d8-resource-details.twig
+++ b/src/_patterns/04-pages/d8-resource-details.twig
@@ -182,7 +182,7 @@
       {% cell 'u-bolt-width-1/1 u-bolt-width-1/2@medium' %}
          {% include "@bolt/card-w-teaser.twig" with {
             "image": {
-              "src": "https://www.fillmurray.com/g/1200/660"
+              "src": "/images/placeholders/1200x660.jpg"
             },
             "teaser": {
               "headlines": [
