--- a/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
+++ b/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
@@ -1,23 +1,50 @@
+/* ------------------------------------ *\
+   Ordered List
+\* ------------------------------------ */
+
+/*$bolt-ordered-list-item-number-font-size: xsmall;*/
+
+$bolt-ordered-list-border-width: $bolt-border-width;
+$bolt-ordered-list-border-style: $bolt-border-style;
+$bolt-ordered-list-border-color: currentColor; // TODO: needs to map this to theme text color at 0.1 opacity.
+
+
 .c-bolt-ordered-list {
   @include bolt-margin(0);
   @include bolt-padding(0);
 
   list-style: none;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-top-color: currentColor;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: currentColor;
+  counter-reset: li;
 }
 
 .c-bolt-ordered-list__item {
-  @include bolt-margin(0);
-  @include bolt-padding(medium, squished);
+  @include bolt-margin(0 0 small medium);
+  @include bolt-padding(0 0 small 0);
 
-  & + #{&} {
-    border-top-width: 1px;
-    border-top-style: solid;
-    border-top-color: currentColor;
+  position: relative;
+  counter-increment: li;
+  border-bottom-width: $bolt-ordered-list-border-width;
+  border-bottom-style: $bolt-ordered-list-border-style;
+  border-bottom-color: $bolt-ordered-list-border-color;
+
+  &:before {
+    @include bolt-font-size(xsmall);
+    @include bolt-font-weight(bold);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0.125em;
+    left: bolt-spacing(medium) * -1;
+    width: $bolt-line-height--xsmall + rem;
+    height: $bolt-line-height--xsmall + rem;
+    content: counter(li);
+    text-align: center;
+    border-radius: 100em;
+
+    // TODO: refactor these after theming is done.
+    color: var(--bolt-color-heading, bolt-color(white));
+    background-color: var(--bolt-color-heading, bolt-color(indigo));
   }
 }
