--- a/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.twig
+++ b/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.twig
@@ -2,4 +2,13 @@
   <li class="c-bolt-ordered-list__item">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
   <li class="c-bolt-ordered-list__item">Aliquam tincidunt mauris eu risus.</li>
   <li class="c-bolt-ordered-list__item">Vestibulum auctor dapibus neque.</li>
+  <li class="c-bolt-ordered-list__item">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+  <li class="c-bolt-ordered-list__item">Aliquam tincidunt mauris eu risus.</li>
+  <li class="c-bolt-ordered-list__item">Vestibulum auctor dapibus neque.</li>
+  <li class="c-bolt-ordered-list__item">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+  <li class="c-bolt-ordered-list__item">Aliquam tincidunt mauris eu risus.</li>
+  <li class="c-bolt-ordered-list__item">Vestibulum auctor dapibus neque.</li>
+  <li class="c-bolt-ordered-list__item">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+  <li class="c-bolt-ordered-list__item">Aliquam tincidunt mauris eu risus.</li>
+  <li class="c-bolt-ordered-list__item">Vestibulum auctor dapibus neque.</li>
 </ol>
